crates/anchor-litesvm-derive/tests/compile_fail/missing_bundled_with.rs
use anchor_litesvm_derive::BundledPubkeys;

#[derive(BundledPubkeys)]
struct Make {
    pub maker: anchor_lang::prelude::Pubkey,
}

fn main() {}
